# MasteringAgenticAI

./: .gitignore  README.md
projects/semanticATSRecruit/: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
projects/semanticATSRecruit/docs/: architecture.md  project_documentation.md  project_explanation.md
projects/semanticATSRecruit/semanticats/: __init__.py  config.py  models.py  state.py
projects/semanticATSRecruit/semanticats/graph/: __init__.py  graph.py
projects/semanticATSRecruit/semanticats/graph/nodes/: display.py  hitl.py  ingest.py  reasoning.py  search.py  verification.py
projects/semanticATSRecruit/semanticats/prompts/: __init__.py  jd_extraction.py  reasoning.py  resume_extraction.py  verification.py
projects/semanticATSRecruit/semanticats/tools/: __init__.py  bm25_index.py  chunking.py  embedder.py  extraction.py  hybrid.py  llm_service.py  pdf_parser.py  pinecone_client.py  reranker.py  session_overrides.py  skill_graph.py
projects/semanticATSRecruit/semanticats/ui/: __init__.py  components.py  interrupt_widgets.py  streamlit_app.py
projects/semanticATSRecruit/tests/: test_chat_answers.py  test_hybrid.py  test_pdf_parser.py  test_semantic_scenarios.py  test_skill_graph.py  test_verification.py
projects/spendwise-agent/: .env.example  README.md  app.py  requirements.txt
projects/spendwise-agent/data/: category_rules.csv
projects/spendwise-agent/docs/: architecture.md  (+2 more)
projects/spendwiseRAG/: .env.example  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
(+48 files in other folders)
