[project]
name = "semanticatsrecruit"
version = "0.1.0"
description = "semanticATSRecruit for evidence-based transferable-skill candidate matching."
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
